Gliederung Kapitel und Arbeitsstand

--- a/Standardworkflow-Anrufung.tex
+++ b/Standardworkflow-Anrufung.tex
@@ -1,7 +1,108 @@
 % \begin{refsection}
-\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (§~8~Abs.~1~SGO) und ob die Anrufung formell vollständig ist (§~8~Abs.~3~SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d.~§~8~Abs.~3~S.~1~SGO kann auch aus einer Postfachadresse bestehen.}
+\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO\nomenclature{SGO}{Schiedsgerichtsordnung}) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
 
 \chapter{Schema für den Standardworkflow \enquote{Ich habe eine Anrufung erhalten}}
+Ein Schiedsgericht wird nur auf Anrufung tätig schreibt die SGO in \S~8 Abs.~1 S.~1 vor.
+Damit ist die Anrufung der zentrale Punkt für ein Schiedsgericht, an dem jede Tätigkeitkeit anknüpft.
 
-%\chapterbib
+Aber auch der Umgang mit einer Anrufung ist streng formal geregelt.
+Das soll es den Gerichten erleichtern, gewissen Standardfrage nicht immer noch im Nachhinein stellen zu müssen, weil sie immer auftauchen.
+
+Grundlegend sieht der Ablauf der zu prüfenden Punkte dabei wie folgt aus:
+\begin{enumerate}[label=\Roman*.]
+% \itemsep0em 
+\item \textbf{Antragsteller}: Ist klar genannt, \emph{wer} die Klage erheben will? (\S~8 Abs.~3 Nr. 1 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~1})
+\item \textbf{Antragsgegner}: Ist klar genannt, gegen \emph{wen} sich die Klage richten soll? (\S~8 Abs.~3 Nr.~2 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~2})
+\item Sind Antragsteller und Antragsgegner \textbf{parteifähig}? (\S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!\S~8!Abs.~1 S.~1})
+\item Ist jeweils eine zulässige \emph{Anschrift} angegeben? (\S~8 Abs.~3 Nr.~1, 2 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~1}\index[paridx]{SGO!\S~8!Abs.~3 Nr.~2})
+\item Sagt der Antragsteller klar, \emph{was} genau er erreichen will? (\S~8 Abs.~3 Nr.~3 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~3})
+\item Ist das, was der Antragsteller will, etwas, das ihm nach Satzung, Parteiengesetz oder sonstigen mitgliedschaftlichen oder organschaftlichen Rechten \emph{möglicherweise zustehen könnte}? (\S~8 Abs.~1 S.~1 SGO\index[paridx]{SGO!\S~8!Abs.~1 S.~1})
+\item Nennt der Antragsteller \textbf{Gründe}, warum das gewünschte ihm zustehen sollte? (\S~8 Abs.~3 Nr.~4 SGO\index[paridx]{SGO!\S~8!Abs.~3 Nr.~4})
+\item Ist die \textbf{Form} eingehalten? (\S~8 Abs.~3 SGO\index[paridx]{SGO!\S~8!Abs.~3})
+\item Ist das angerufene Schiedsgericht \textbf{zuständig}? (\S~8 Abs.~5 SGO\index[paridx]{SGO!\S~8!Abs.~5})
+\item Ist die \textbf{Frist} eingehalten worden? (\S~8 Abs.~4 SGO\index[paridx]{SGO!\S~8!Abs.~4})
+\end{enumerate}
+
+\section{Statthaftigkeit}
+\label{Standardworkflow:Statthaftigkeit}
+Die grundlegendsten Anforderungen an eine Anrufung werden unter dem Begriff Statthaftigkeit zusammengefasst.
+Eine Klage ist grundsätzlich nur statthaft, wenn diese Anforderungen erfüllt sind.
+
+\subsection{Antragsteller}
+\label{Standardworkflow:Antragsteller}
+Das allererste dieser Kriterien ist die Benennung eines \index[idx]{Antragsteller|textbf} Antragstelllers bzw. einer Antragstellerin, andernorts auch Kläger  bzw. Klägerin genannt.
+Die SGO kennt alledings den Begriff Kläger bzw. Klägerin nicht sondern nur den Begriff Antragsteller bzw. Antragstellerin, entsprechend wird auch dieser Begriff hier verwendet.
+Antragsteller bzw. Antragstellerin ist typischerweise der oder die Anrufende selbst.
+In einigen Fällen, typischerweise im Falle einer Anrufung durch einen Vorstand oder ein anderes Organen, kann der oder die Anrufende auch Vertreter bzw. Vertreterin des Antragstellers bzw. der Antragstellerin sein.
+In jedem Fall muss aus der Anrufung klar identifizierbar hervorgehen, wer nun mit der Anrufung Rechte bzw. Ansprüche vor dem Schiedsgericht gegen eine andere Person gelten machen will.
+Dieser jemand ist der Antragsteller bzw. die Antragstellerin.
+
+In den meisten Fällen dürfte dies ein Mitglied sein, in seltenen Fällen kann es auch ein einzelner Amtsträger oder eine einzelne Amtsträgerin sein, noch häufiger dürfte es ein Organ als gesamtes sein.
+Typischerweise gibt es lediglich vier Fälle, in denen die Anrufung durch ein Organ erfolgt:
+\begin{enumerate}[label=\arabic*.)]
+% \itemsep0em 
+\item Parteiausschlussverfahren\index[idx]{Parteiausschluss}
+\item Gliederungsordnungsmaßnahmeneinsprüche\index[idx]{Ordnungsmassnahme@Ordnungsma""snahme!Gliederungs-}
+\item Gliederungskompetenzstreitigkeiten
+\item Organhandlungsfähigkeitsstreitigkeiten
+\end{enumerate}
+Der letzte Fall, die Organhandlungsfähigkeitsstreitigkeiten sind strenggenommen sogar nur ein Unterfall der Gliederungskompetenzstreitigkeiten, aber dazu an entsprechender Stelle mehr.
+
+Aus dem Rahmen fallen natürlich auch immer die Berufungs- und Beschwerdeanrufungen im Instanzenzug und die Widerspruchsanrufung im einstweiligen Rechtsschutz, weil hier die Anrufung typischerweise von der in der ursächlichen Schiedsgerichtsentscheidung unterlegenen Partei ausgeht.
+
+\subsection{Antragsgegner}
+\label{Standardworkflow:Antragsgegner}
+Der Antragsgegner\index[idx]{Antragsgegner|textbf} oder die Antragsgegnerin ist ebenso notwendig und muss ebenso klar und eindeutig aus der Anrufung entnehmbar sein. Bezüglich der Vertretung gilt hier dasselbe wie bei dem \index[idx]{Antragsteller} Antragsteller bzw. der Antragstellerin.
+
+Bei allen Verfahren nach SGO\nomenclature{SGO}{Schiedsgerichtsordnung} handelt es sicht um sogenannte kontradiktorische Verfahren.
+Das bedeutet, dass das Verfahren Streit von zwei Parteien um gegenläufige Interessen ausgestaltet ist.
+In den meisten Fällen ist der Antragsgegner bzw. die Antragsgegnerin daher ein Organ, in wenigen Fällen aber auch ein Mitglied.
+Wichtig dabei ist aber: Es gibt nach SGO keine Verfahren von Mitgliedern gegen andere Mitglieder.
+Schon fraglich ist, ob ein einzelner Amtsträger bzw. eine Amträgerin gegen einen anderen Amträgräger bzw. eine andere
+Amtsträgerin einzeln vorgehen kann, dazu gab es bisher noch nie einen Anlass, das zu entscheiden.
+Theoretisch ist es aber nicht komplett ausgeschlossen.
+Möglich ist in jedemfall das vorgehen einer Amtsträgerin bzw. eines Amtsträgers gegen das restliche Organ, eines Organs  gegen einzelne Amtsträger und Amtsträgerinnen sowie das vorgehen von Mitgliedern gegen Organe und andersherum.
+Wichtig ist daher der Grundsatz: Aus dem Antragsteller oder der Antragstellerin ergibt sich zwnagsweise ein eingeschränkter Kreis möglicher Antragsgegner und Antragsgegnerinnen.
+
+\subsection{Parteifähigkeit}
+\label{Standardworkflow:Parteifaehigkeit}
+Gerade wude es schon angesprochen: Antragsteller bzw. Antragstellerin und Antragsgegner bzw. Antragsgegnerin sind die \index[idx]{Streitpartei}Parteien des Prozesses.
+Nach SGO sind Mitglieder und Organe explizit dazu berechtigt, ein Schiedsgericht anzurufen, wenn sie sich in ihren Rechten verletzt fühlen, \S~8 Abs.~1 S.~2 SGO\index[paridx]{SGO!\S~8!Abs.~1 S.~2}.
+Das bedeutet, dass diese auch zwingend Partei in einem Schiedsgerichtsverfahren sein können.
+Ferner muss die Parteifähigkeit\index[idx]{Parteifähigkeit} auch Amtsträgern als spezieller Art von Mitgliedern zugestanden werden.
+Ob man dabei davon ausgeht, dass Amtsträger eine eigene Kategorie von Partei darstellen oder lediglich Mitglider sind, deren Rechte aufgrund einer Wahl zeitlich beschränkt verändert wurden, ist eigentlich eine akademische Debatte.
+Angesichts dessen, dass Amtsträger aber in die Rechte anderer Amtsträger eingreifen können und dann im Sinne eines effektiven Rechtsschutzes entweder das Recht des anderen Amtsträgers zu einem Organrecht erklärt werden muss oder aber eine Klage von Mitglied gegen Mitglied zugelassen werden muss, spricht doch einiges dafür, Amtrsträger als eigene, nicht explizit genannte,  aber doch erfasste Kategorie innerhalbt der Parteifähigkeit zu sehen.
+
+Brisanz gewinnt die Einordnung der Amtsträger als eigene parteifähige Kategorie bei der Klage von Mitgliedern gegen Amtsträgern, was dadurch nicht mehr von der nicht erlaubten Klage von Mitglied gegen Mitglied vor dem Schiedsgericht ausgeschlossen ist.
+Allerdings müsste dann eine Klagebefugnis vom Mitglied vorliegen, typischerweise ist die Rechtsverletzung aber nicht dem  einzelnen Amtsträger sondern dem ganzen Organ zuzurechnen genauso wie sich Ansprüche aus der Mitgliedschaft typischerweise gegen das zuständige Organ richten. 
+Daher kann fast davon ausgegangen werden, dass es nicht zu einer solchen Klagekonstellation kommen kann bzw. falls doch, dass diese dann gerade nötig ist, um einen effektien Rechtsschutz für Mitglieder zu gewähren.
+
+Fraglich ist zudem ob die Partei bzw. die einzelnen Gliederungen Parteifähig im Sinne der SGO sind.
+Während dies für Prozesse vor staatlichen Gerichten aufgrund der dortigen Regelungen zur Parteifähigkeit\footnote{Vgl. etwa \S~50 ZPO\nomenclature{ZPO}{Zivilprozessordnung}\index[paridx]{ZPO!\S~50}.} grundsätzlich anzunehmen ist, spielt die Partei bzw. Gliederung als solche im internen Rechtsstreit eine untergeordnete Rolle, da die Handlung immer zumindest einem Organ oder zumindest Amtsträger zugeordnet werden kann.
+Daher ist auch das Bundesschiedsgericht in seiner Rechtsprechung dazu übergegangen, die Parteifähigkeit der Partei und ihrer Gliederungen nur zu bejahen, wenn eine derartige Zurechnung nicht möglich ist\footnote{Vgl. \cite[S. 4]{BSG1614HS}.}.
+Die Partei und die Gliederungen kommen also nur als subsidiärer Antragsgegner bzw. Antragsgegnerin in betracht.
+
+\subsection{Anschrift}
+\label{Standardworkflow:Anschrift}
+
+\subsection{Anträge}
+\label{Standardworkflow:Antraege}
+
+\subsection{Begründung und Umstände}
+\label{Standardworkflow:Gruende}
+
+\section{Antragsbefugnis}
+\label{Standardworkflow:Antragsbefugnis}
+
+\section{Form}
+\label{Standardworkflow:Form}
+
+\section{Zuständigkeit}
+\label{Standardworkflow:Zustaendigkeit}
+
+\section{Frist}
+\label{Standardworkflow:Frist}
+
+
+\chapterbib
 % \end{refsection}
