--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -41,8 +41,15 @@
   volume = {45},
   year1 = {2014}
 }
-
-
+@JURISDICTION{BSG1614HS,
+  author = {Bundesschiedsgericht},
+  shortauthor = {BSG},
+  usera = {Urteil},
+  userb = {BSG 16/14-H S},
+  date = {2014-05-22},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#677993841}
+}
 @JURISDICTION{BSG1415HS,
   author = {Bundesschiedsgericht},
   shortauthor = {BSG},
