Update Normenauslegung; erste Version Urteilsaufbau; Schönheitsreparaturen

--- a/Instanzenzug.tex
+++ b/Instanzenzug.tex
@@ -2,6 +2,12 @@
 \chapterpreamble{Die Schiedsgerichtsordnung sieht ein Verfahren in zwei Instanzen vor: Der Eingangsinstanz und der Berufungsinstanz. Das Bundesschiedsgericht ist Eingangsinstanz für Verfahren, die sich gegen die Bundespartei oder ihre Organe richten. Ein Landesschiedsgericht ist Eingangsinstanz für Verfahren, die sich gegen den Landesverband oder eines seiner Organe richten. Bei Einsprüchen gegen Ordnungsmaßnahmen ist das Gericht niedrigster Ordnung, in der der Antragsteller seinen Wohnsitz hat, zuständig. In allen sonstigen Fällen ist das niedrigste Gericht, in dessen örtlicher Zuständigkeit der Antragsgegner sich befindet, zuständig. Die Berufungsinstanz wird nach Abschluss des erstinstanzlichen Verfahrens durch Einlegen der Berufung zuständig. Sie führt das Verfahren als weitere Tatsacheninstanz, d.h. erhebt erneut Beweis und gewährt den Parteien erneut vollumfassend rechtliches Gehör. Es hat sich jedoch die Möglichkeit der Rückverweisung bei Rechtsfehlern etabliert.}
 
 \chapter{Der Instanzenzug}
+
+\begin{figure}[h!]
+\caption{a train with a jet engine underneath (© Randall Munroe, xkcd.com)}
+\centering
+	\includegraphics[width=0.5\textwidth]{train_loop_jet_bottom.png}
+\end{figure}
 %\blindtext[1]
 
 %\chapterbib
