--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -2,19 +2,90 @@
 \chapterpreamble{Das Urteil ist das Ergebnis des Prozesses. Es sollte follguht™ sein und Rechtsfrieden schaffen.}
 
 \chapter{Urteilsaufbau}
-%\blindtext[1]
-%\section{Grundlagen}
-%\blindtext[1]
-%\section{Das Rubrum}
-%\blindtext[1]
-%\section{Tenorierung}
-%\blindtext[5]
-%\section{Sachverhalt}
-%\blindtext[5]
-%\section{Entscheidungsgründe}
-%\blindtext[5]
-%\section{Die Rechtsmittelbelehrung}
-%\blindtext[1]
+
+\section{Grundlagen}
+Gem. \S~12 Abs.~3 S.~1~\nomenclature{SGO}{Schiedsgerichtsordnung}\index[paridx]{SGO!\S~12!Abs.~3 S.~1} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.} Es empfiehlt sich, dieser Aufzählung notwendiger Inhalte auch in der Reihenfolge zu folgen. Ein Urteil beginnt daher, nach einigen Formalien im \emph{Rubrum}, mit der letztendlichen Entscheidung des Gerichts. Sie wird im \emph{Tenor} aufgeführt. Erst danach wird der \emph{Sachverhalt} dargestellt und die im Tenor verkündeten Entscheidungen des Gerichts in den \emph{Entscheidungsgründen} begründet. Sofern gegen das Urteil Rechtsmittel eingelegt werden können, wird es mit einer \emph{Rechtsmittelbelehrung} abgeschlossen. Während gem. \S11 Abs.~7~SGO\index[paridx]{SGO!\S~11!Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
+
+Anders als bei Urteilen des Europäischen Gerichtshofes oder z.B. französischen Gerichten oder Gerichten aus dem angelsächsischen Rechtsraum werden Urteile in Deutschland regelmäßig in \enquote{ganz normalem Fließtext} verfasst, d.h. als mehrere Sätze, in Absätze unterteilt, regelmäßig mit Zwischenüberschriften gegliedert. Die Parteien werden im Rahmen der Schiedsgerichtsordnung schlicht als \emph{Antragstellerinnen} und \emph{Antragsgegnerinnen} bezeichnet (nicht etwa als Klägerinnen und Beklagte); \enquote{Angeklagte} kennt die SGO auch im Falle von Ordnungsmaßnahmen nicht. Auch sonst sollte die Sprache möglichst einfach gehalten sein: Ein gutes Urteil kommt ohne komplexe Schachtelsätze aus.
+
+\section{Das Rubrum}
+Unter der Überschrift \Zitat{Urteil zu (Aktenzeichen)} beginnt das Urteil mit der Aufzählung (inkl. Anschriften) der Streitparteien, ihrer jeweiligen Vertretung und der Streitsache. Dieser erste Teil eines Urteils wurde früher einmal rot gedruckt und wird daher traditionell als \enquote{Rubrum} (lat. \enquote{rot}) bezeichnet.
+
+Das Rubrum wird in der Schiedsgerichtsordnung nicht explizit verlangt. Es hat sich dennoch in der Praxis sämtlicher Schiedsgerichte eingebürgert. Auf eine Formel vergleichbar zum bei staatlichen Gerichten verwendeten \Zitat{Im Namen des Volkes} wird dabei verzichtet und stattdessen schlicht mit den Worten \Zitat{In dem Verfahren (Aktenzeichen)} begonnen, woran sich die folgenden Angaben anschließen:
+\begin{itemize}
+\item Name und Anschrift der Antragstellerin (vgl. auch \S~8 Abs.~3~SGO\index[paridx]{SGO!\S~8!Abs.~3}),
+\item Name und Kontakt der Antragstellervertretung (\Zitat{vertreten durch…}),
+\item Bezeichnung der vorstehenden Partei als \Zitat{– Antragsteller(in) –},
+\item \Zitat{gegen},
+\item Name und Anschrift der Antragsgegnerin (vgl. auch \S~8 Abs.~3~SGO\index[paridx]{SGO!\S~8!Abs.~3}),
+\item Name und Kontakt der Antragsgegnervertretung (\Zitat{vertreten durch…}),
+\item Bezeichnung der vorstehenden Partei als \Zitat{– Antragsgegner(in) –},
+\item Bezeichnung des Streitgegenstandes (z.B. \Zitat{wegen Anfechtung von Parteitagsbeschlüssen}).
+\end{itemize}
+
+Es folgt die namentliche Nennung der beschließenden Richterinnen und Richter sowie das Datum des Urteils, etwa \Zitat{haben die Richterinnen und Richter (Namen) am (Datum) entschieden:}. Darauf folgt der \emph{Tenor}, der streng genommen zum Rubrum gehört, aufgrund seiner besonderen Stellung hier aber gesondert behandelt wird.
+
+Sind auf Seiten einer Partei (oder beiden) mehrere Personen aufzuführen (Streitgenossenschaft), so werden diese als Antragstellerinnen fortlaufend nummeriert aufgeführt. Hierfür bieten sich arabische Nummerierung und ein Neubeginn jeweils bei 1 bei Antragstellern bzw. Antragsgegnern an.
+
+In einem Berufungsverfahren wird die Bezeichnung als \enquote{Antragstellerin} oder \enquote{Antragsgegnerin} jeweils um die Bezeichnung als \enquote{Berufungsführerin} bzw. \enquote{Berufungsgegnerin} erweitert (bspw. \Zitat{Antragstellerin und Berufungsführerin} oder \Zitat{Antragstellerin und Berufungsgegnerin}).
+
+\section{Tenor}
+Der Tenor enthält die Entscheidung (oder die Entscheidungen) in der Hauptsache.
+
+Da die Verfahren vor den Schiedsgerichten der Piratenpartei immer kostenfrei sind (\S~16 Abs.~1 S.~1~SGO),\index[paridx]{SGO!\S~16!Abs.~1~S.~1} kann eine Kostenentscheidung entfallen. Auch einer Entscheidung über vorläufige Vollstreckbarkeit bedarf es nicht, da die SGO weder Vollstreckungsvorschriften vorsieht, noch Maßnahmen zur Zwangsvollstreckung kennt. Ebenso ist nicht notwendig, ein mögliches Rechtsmittel im Tenor aufzuführen, da über die Möglichkeit von Rechtsmitteln nicht durch das Gericht entschieden wird: Die Entscheidung, ob Rechtsmittel möglich sind, oder nicht, wird von der SGO getroffen. Da sie dem Gericht nicht überlassen ist, ist sie auch im Tenor nicht zu erwähnen. Sind Rechtsmittel möglich, sind die Parteien darüber gesondert zu belehren (\S~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!\S~13!Abs.~2~S.~3}, siehe unten).
+
+Die Entscheidungsformel ist der wichtigste Teil des Urteils. Sie ist besonders sorgfältig zu formulieren. Unterlaufen Fehler, kann das darin münden, dass keine konkreten Rechtsfolgen und/oder Handlungsanweisungen für die Parteien abgeleitet werden können, dass für etwas keine Rechtskraft erwächst oder aber etwas unbeabsichtigt nicht oder falsch gestaltet wird.
+
+Der Tenor muss vollstreckbar sein.\footnote{Zitat aus der ZPO vll?}
+% Hier fehlt noch stuff!
+
+\section{Sachverhalt}
+Gemäß \S~12 Abs.~3 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~3~S.~1~SGO} enthält ein Urteil unter anderem eine Sachverhaltsdarstellung. In diesem Abschnitt sind die tatsächlichen Feststellungen, die der Entscheidung des Gerichts zu Grunde liegen, objektiv und neutral aufzuführen. Er muss aus sich heraus verständlich sein, Verweise sollten nur ausnahmsweise verwendet werden; insbesondere muss hier sichergestellt sein, dass die entsprechende Quelle auch nach geraumer Zeit noch verfügbar sein wird. Sind Teile von Dokumenten für die Entscheidung maßgeblich, sollten sie im entsprechenden Umfang zitiert werden, anstatt lediglich zu verweisen.
+
+Der Sachverhalt ermöglicht es Außenstehenden, die zum Streit und letztlich zur Entscheidung führende Sachlage zu verstehen. Den Parteien dient die Sachverhaltsdarstellung als Kontrollmittel, nämlich dahingehend, ob das Gericht ihr Vorbringen zu den Tatsachen zur Kenntnis genommen und richtig verstanden hat.
+
+Inhaltlich bietet sich eine Gliederung nach Anträgen an, sowie danach, ob die Tatsachen unstreitig (also von allen Parteien anerkannt) oder streitig sind. Vorbringen der Parteien sollte als Prozessgeschichte chronologisch und so wie von ihnen geäußert widergegeben werden. Insbesondere sind Schlussfolgerungen zu vermeiden. Dabei sollten Schriftsätze und auch mündliche Vorträge – schon aus Platzgründen – nicht vollständig zitiert werden, sondern nur ihrem Sinngehalt und ihren Schwerpunkten nach.
+
+Im Normalfall beginnt ein Urteil mit der Prozessgeschichte und den unstreitigen Tatsachen. Darauf folgt der streitige Vortrag der Antragstellerinnen, gefolgt von ihren Anträgen. Die Anträge der Antragsgegnerinnen schließen sich an, gefolgt von ihrem Vorbringen. Sprachlich ist darauf zu achten, dass sich das Gericht das jeweilige Vorbringen der Parteien nicht durch Formulierungen im Indikativ zu Eigen macht. Stattdessen soll es indirekte Rede verwenden.
+
+Der Sachverhalt sollte so kurz wie möglich gefasst sein, Überflüssiges ist wegzulassen. Zur Kontrolle gilt: Jede Begründung benötigt eine korrespondierende Darstellung der Fakten im Sachverhalt – Fakten, auf die in der Begründung nicht Bezug genommen werden, sind überflüssig. Rechtliche Bewertungen durch das Gericht finden in der Sachverhaltsdarstellung keinen Platz.
+
+\section{Entscheidungsgründe}
+Das Urteil ist das Ergebnis der juristischen Prüfung des Gerichts. Während die Prüfung selbst in der Regel nach dem weiter oben beschriebenen \enquote{Gutachtenstil} folgt, der zum Ergebnis hinführt, wird im Urteil vom Ergebnis ausgehend begründet (\enquote{Urteilsstil})\index[idx]{Urteilsstil}. In den Entscheidungsgründen\footnote{Diese Formel ist für Urteile in der Zivilgerichtsbarkeit üblich; bei Beschlüssen der Zivilgerichtsbarkeit sowie Urteilen im Strafprozess hat sich die Verwendung von \enquote{Gründe} eingebürgert.} legt das Gericht dar, warum die gefällte Entscheidung so – und nicht anders – gefällt werden musste.
+
+Die streitentscheidenden Normen sind im ersten Satz aufzuführen und im Ergebnis zu bewerten.%Wäre hier ein Beispiel angebracht?
+Danach folgt die juristische Würdigung der Rechtslage, d.h. bei einer erfolgreichen Klage eine Prüfung aller relevanten Tatbestandsmerkmale in geeigneter Reihenfolge; bei einer abweisenden Klage genügt die Schilderung des (in der Prüfreihenfolge zuerst auftauchenden) Grundes ihres Scheiterns.
+
+\emph{Geeignete Reihenfolge} ist in der Regel die Reihenfolge, in der der Fall insgesamt geprüft wurde: Beginnend mit der Statthaftigkeit der Anrufung über die Zulässigkeit hin zur Begründetheit der Klage. Dabei reicht es bei Statthaftigkeit und Zulässigkeit aus, wenn lediglich problematische Aspekte diskutiert und begründet werden. Unproblematisches, d.h. für jeden ersichtlich erfüllte Kriterien können hier weggelassen oder in kurzen Sätzen festgestellt werden (bspw. \Zitat{M ist Mitglied der Piratenpartei. Er hat das zuständige Gericht form- und fristgerecht angerufen.} Ausführlicher ist mit der Begründetheit zu verfahren: Hier sollten alle relevanten Tatbestandsmerkmale zumindest erwähnt werden. Ausführlich begründet werden sollte jede Entscheidung des Gerichts, die sich gegen eine Rechtsansicht einer der Parteien wendet: Widerspricht das Gericht der Rechtsauffassung einer der Parteien (oder gar beiden, wenn diese sich in diesem Falle einig waren oder gar eine dritte Lösung gefunden wurde), so dürfen diese erwarten, dass das Gericht hierzu Stellung bezieht.
+
+Da im Rahmen der Schiedsgerichtsbarkeit der Piratenpartei keine Kostenentscheidung getroffen werden muss (s.o.), erübrigt sich auch die Begründung einer solchen.
+
+\subsection{Obiter Dicta}
+Ein \emph{obiter dictum} (lat. \emph{das nebenbei Gesagte}) ist eine rechtliche Ausführung zur Urteilsfindung, die über das Erforderliche hinausgeht und auf der das Urteil dementsprechend nicht beruht.\footnote{\url{http://www.duden.de/rechtschreibung/Obiter_Dictum}.} \emph{Obiter dicta} müssen sich dementsprechend stets entgegenhalten lassen, dass sie im Urteilstext eigentlich überflüssig und damit wegzulassen wären. Auf der anderen Seite kann ein \emph{obiter dictum} zur Rechtsfortbildung beitragen, etwa indem eine streitentscheidende Norm über ihren Beitrag zum vorliegenden Streit hinaus ausgelegt oder kommentiert wird. Es kann auch genutzt werden, um eine Ansicht zu vergleichbaren Fällen darzulegen, eine stehende Rechtsprechung zu bestätigen oder aufzuheben. Gerade aufgrund der vermittelnden, streitschlichtenden Aufgabe von Schiedsgerichten kann eine ergänzende Anmerkung sinnvoll sein, um die streitenden Parteien zu befrieden oder weitere Streitigkeiten \Zitat{im Umfeld des verfahrensgegenständlichen Streits} zu vermeiden.
+
+Gefahren bestehen bei \emph{obiter dicta} allerdings (auch) darin, dass sie spätere Fälle zumindest teilweise vorwegnehmen, ohne aber die Möglichkeit zu haben, konkrete Gesichtspunkte einer bestimmten, nicht vorhersehbaren Konstellation zu würdigen. Sie können (bspw. bei geänderter Rechtsauffassung eines Obergerichts) spätere Klagen ermöglichen, da die Betroffenen aus dem \emph{obiter dictum} ersehen können, dass das Gericht ihren Argumenten (wieder) zugänglich ist. Die sich im Umkehrschluss ergebende Gefahr besteht darin, dass spätere Verfahren, die im Kern vielleicht legitim gewesen wären, aufgrund eines unachtsam formulierten oder auf einen ganz anderen Fall bezogenen \emph{obiter dictum} unterbleiben.
+
+Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsbarkeit der Piratenpartei häufiger und ausführlicher vorkommen dürfte – und darf – als das bei staatlichen Gerichten der Fall ist, ist bei ihrer Verwendung äußerste Vorsicht geboten.
+
+\subsection{Abweichende Meinungen}
+Gemäß §~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!§~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.} Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird. Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen. Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen, anstatt sie über die Urteilsbegründungen zu verteilen. Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie vor die abweichenden Meinungen gesetzt werden.
+
+Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, §~12 Abs.~4 S.~2~SGO.
+
+\section{Die Rechtsmittelbelehrung}
+Eine Rechtsmittelbelehrung soll gemäß §~12 Abs.~5~SGO\index[paridx]{SGO!§~12!Abs.~5} zumindest dann erfolgen, wenn gegen das Urteil die Berufung möglich ist. Die Vorschrift ist allerdings dahin auszulegen, dass die Parteien stets über mögliche Rechtsmittel belehrt werden sollen.
+
+Wann ein Rechtsmittel zulässig ist und wie in diesen Fällen zu verfahren ist, wird im Kapitel \enquote{Instanzenzug} beschrieben.
+
+\subsection{Inhalt einer Rechtsmittelbelehrung}
+Die Rechtsmittelbelehrung soll die Parteien darüber in Kenntnis setzen, welches Rechtsmittel bei welchem Gericht in welcher Form und in welcher Frist einzulegen ist. Das Rechtsmittel ist unter Zitat der entsprechenden Norm anzugeben (bspw. die Berufung gemäß §~13 Abs.~1~SGO\index[paridx]{SGO!§~13!Abs.~1}). Zusätzlich zur (eindeutigen) Benennung des Gerichts sind Einreichungsmöglichkeiten anzugeben, also zumindest die Postanschrift, ggf. E-Mail Adresse und Faxnummer des Gerichts. Die Rechtsmittelbelehrung muss den Hinweis enthalten, dass die Einreichung in Textform (d.h. auch per E-Mail) ausreichend ist. Ebenso zu den Formvorschriften gehört der Hinweis, was die Berufung enthalten muss (nämlich das Aktenzeichen und die angegriffene Entscheidung des Gerichts). Ebenso ist die Frist zu nennen, wobei sie nicht berechnet werden muss: Es reicht aus, die Parteien darüber zu belehren, dass die Berufungsfrist gemäß §~13 Abs.~2 S.~1~SGO\index[paridx]{SGO!§~13!Abs.~2} 14~Tage beträgt, sie muss nicht in einem genauen Datum angegeben werden. Diese Berechnung führt im Zweifel das Berufungsgericht aus, das an die Entscheidung der unteren Instanz ohnehin nicht gebunden wäre; die Gefahr, dass die Rechtsmittelbelehrung durch eine falsche Fristberechnung unrichtig wird, kann so umgangen werden.
+
+Die Rechtsmittelbelehrung ist nur für Berufungen normiert. Außer der Berufung kennt die Schiedsgerichtsordnung allerdings noch den \emph{Widerspruch} gegen einstweilige Anordnung (§~11 Abs.~4~SGO)\index[paridx]{SGO!§~11!Abs.~4} und die \emph{sofortige Beschwerde} gegen die Ablehnung einer einstweiligen Anordnung (§~11 Abs.~6~SGO)\index[paridx]{SGO!§~11!Abs.~6}. Im Gegensatz zu den Dokumentationsvorschriften ist eine Anwendbarkeit der Vorschriften über die Rechtsmittelbelehrung auf diese Institute in der Schiedsgerichtsordnung nicht explizit vorgesehen. Die Abhängigkeit einer Belehrung über Verfahrensschritte im Rechtsschutz sollte allerdings von der konkreten Verfahrensart unabhängig sein. Es ist daher eher anzunehmen, dass die Vorschriften über die Belehrung zum Rechtsmittel \emph{Berufung} auf die anderen Rechtsmittel der SGO analog anzuwenden sind. Insbesondere eine korrekte Belehrung schadet in keinem Falle.
+
+\subsection{Unrichtige oder unterbliebene Rechtsmittelbelehrung}
+Ist die Rechtsmittelbelehrung unterblieben, so beginnt die Rechtsmittelfrist nicht zu laufen, §~13 Abs.~2 S.~3~SGO\index[paridx]{SGO!§~13!Abs.~2}. Dies ändert nichts an der Ausschlussfrist von 3~Monaten nach Zugang, nach der eine Entscheidung unanfechtbar ist. Effektiv verlängert sich bei einer fehlenden Rechtsmittelbelehrung also die Berufungsfrist von 14~Tagen auf 3~Monate nach Zustellung des (unvollständigen) Urteils.
+
+Wenngleich die Schiedsgerichtsordnung zu einer bloß unrichtigen, d.h. prinzipiell nicht unterbliebenen, aber nicht vollständigen Rechtsmittelbelehrung schweigt, ist anzunehmen, dass dies zur gleichen Rechtsfolge führt: Sinn der \enquote{Fristverlängerung} ist, dass ein Fehler des Gerichts den Parteien nicht schaden soll. Zweck der Rechtsmittelbelehrung ist es, den Parteien den Zugang zu effektivem Rechtsschutz zu ermöglichen, ohne dass sie die Schiedsgerichtsordnung in all ihren Facetten kennen müssen. Da jeder Fehler eines Rechtsmittels dem Rechtsmittel gleichermaßen schadet, besteht kaum ein Unterschied zwischen einer fehlenden und einer unrichtigen Rechtsmittelbelehrung. Im Gegenteil können die Parteien auf den Inhalt der Rechtsmittelbelehrung vertrauen, der Schaden einer unrichtigen Belehrung könnte daher auch als größer angesehen werden als der einer unterbliebenen Belehrung. Auch bei einer fehlerhaften Rechtsmittelbelehrung \enquote{verlängert} sich die Frist also auf 3~Monate.
 
 %\chapterbib
 % \end{refsection}
