--- a/sghandbuch.cls
+++ b/sghandbuch.cls
@@ -6,7 +6,7 @@
 \DeclareDefaultOption{\PassOptionsToClass{\CurrentOption}{scrbook}}
 
 \DeclareStringOption[Schiedsgerichtshandbuch CC-BY-SA-NC Simon Gauseweg \& Florian Zumkeller-Quast]{doctitle}
-\DeclareStringOption[Simon Gauseweg \& Florian Zumkeller-Quast]{docauthor}
+\DeclareStringOption[Schiedsgerichtshandbuch CC-BY-SA-NC Simon Gauseweg \& Florian Zumkeller-Quast]{docauthor}
 
 \ProcessOptions\relax
 
