apparently not needed

--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -15,7 +15,10 @@
 % \RequirePackage{makeidx}
 \RequirePackage[useindex,makeindex]{splitidx}
 \RequirePackage[intoc]{nomencl}
+% \RequirePackage{multicol}
 \RequirePackage{doc}
+% Dirty Hack because the definition is somehow missing in the packages
+% \def\lneed#1{\need{#1\baselineskip}}
 
 % \RequirePackage[utf8]{inputenc}
 \RequirePackage[ngerman]{babel}
