comments = self documenting code

--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -40,6 +40,9 @@
 % Geklaut aus dem Package Jurabib
 \providecommand*{\SSS}{\S\kern-.8pt\S\relax}%
 
+% 
+% Enable the index preamble
+% 
 \renewenvironment{theindex}{%
   \columnseprule \z@
   \columnsep 70\p@
