added two BSG decisions to the library

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -41,6 +41,15 @@
   volume = {45},
   year1 = {2014}
 }
+@JURISDICTION{BSG20130715,
+  author = {Bundesschiedsgericht},
+  shortauthor = {BSG},
+  usera = {Urteil},
+  userb = {BSG 2013-07-15},
+  date = {2013-07-25},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#1926183737}
+}
 @JURISDICTION{BSG1614HS,
   author = {Bundesschiedsgericht},
   shortauthor = {BSG},
@@ -85,6 +94,15 @@
   date = {2015-04-09},
   gender = {sn},
   url = {http://piraten-bsg.de/#1873239599}
+}
+@JURISDICTION{BSG3815HS,
+  author = {Bundesschiedsgericht},
+  shortauthor = {BSG},
+  usera = {Beschluss},
+  userb = {BSG 38/15-H S},
+  date = {2015-07-17},
+  gender = {sn},
+  url = {http://piraten-bsg.de/#549629106}
 }
 @JURISDICTION{LSGBB147,
   author = {Landesschiedsgericht~Brandenburg},
