Erster Entwurf einer Einleitung

--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -2,15 +2,40 @@
 \chapterpreamble{Ein Schiedsgerichtshandbuch ist geeignet, erforderlich und auch angemessen, die Qualität der Rechtsprechung innerhalb der Parteigerichte der Piratenpartei zu verbessern.}
 
 \chapter{Einleitung}
-%\blindtext[1]
-%\blindtext[1]\footcites{BSG1415HS}{BSG1515HS}{Loewisch1985}
-%\blindtext[1]
-%\blindtext[1]\footcites{BSG1415HS}{LSGBB147}{Risse1985}
-%\blindtext[1]
-%\blindtext[1]\footcites{BSG1715HS}{LSGBB147}
-%\blindtext[1]
+Schon die Verfassung gibt den politischen Parteien in Art. 21\index[paridx]{GG!Art.~21} eine ganz besondere Stellung.
+Ihre Gründung ist frei heißt es dort in Absatz 1 Satz 2\index[paridx]{GG!Art.~21!Abs.~1 Satz~2}.
+Doch nicht nur die Gründung der Parteien ist frei, auch die innere Struktur ist ihnen --- unter beachtung gewisser demokratischer Mindeststandards gemäß Art.~21 Abs.~1 Satz~3 GG\index[paridx]{GG!Art.~21!Abs.~1 Satz~3} --- selbst überlassen.
+Sie sollen unabhängig sein von staatlichem Einfluss.
+
+Das hat einen ganz einfachen Grund: Politische Parteien sind ein wichtiger Spieler im Machtgefüge der Bundesrepublik Deutschland.
+Sie sind es, die Einfluss auf den Staat haben sollen und nicht umgekehrt.
+Wo es aber um Macht geht, wird gestritten.
+Und das nicht selten.
+Das war Die Schiedsgerichtsordnungselbst dem Gesetzgeber bewusst.
+
+Um die Staatsferne der Parteien zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
+Parteischiedsgericht handeln dabei nach ihrer von ihrer eigenen Partei erlassenen Verfahrensordnung.
+
+Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten und sich strikt an  die von der eigenen Partei erlassene Prozessordnung halten.
+
+Da gerade in der Piratenpartei oft unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
+Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben und kann so als Nachschlagweg genutzt werden.
+
+Zwei Juristen, drei Meinungen lautet ein geflügeltes Wort.
+Einen Anspruch auf Vollständigkeit der Darstellung aller Meinungen und Argumente zu sämtlichen Auslegungen der relevanten Normen könnten wir schon gar nicht gerecht werden.
+Wir haben daher beschlossen, das Handbuch Etappenweise zu vervollständigen und uns dabei an der Rechtsprechung des Bundesschiedsgerichtes und der Landesschiedsgerichte zu orientieren und so die typischen Probleme und Konstellationen dazustellen, mit denen Richter in der Parteienschiedsgerichtbarkeit konfrontiert sein werden.
+
+\vspace{20mm}
+
+Simon Gauseweg\\
+Vorsitzender Richter am Landesschiedsgericht Brandenburg
+
+\vspace{5mm}
+
+Florian Zumkeller-Quast\\
+Richter am Bundesschiedsgericht a.D.
 
 %\chapterbib
-% \printshortbibliography[title={Urteile}, type=jurisdiction,heading=chapterbibliography]
-% \printshortbibliography[title={Andere Literatur}, nottype=jurisdiction,heading=chapterbibliography]
 % \end{refsection}
+
+ 
