--- a/sghandbuch.sty
+++ b/sghandbuch.sty
@@ -9,6 +9,7 @@
 \RequirePackage[hyperref=true]{scrhack}
 \RequirePackage{hyperref}
 \RequirePackage{xpatch}
+\RequirePackage{graphicx}
 
 \RequirePackage{enumerate}
 \RequirePackage{enumitem}
