changed biblatex datamodel. renamed jurisdiction to ruling due to strange behaviour. rename fields from user* to something meaningful on the way.

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -41,75 +41,86 @@
   volume = {45},
   year1 = {2014}
 }
-@JURISDICTION{BSG20130715,
-  author = {Bundesschiedsgericht},
-  shortauthor = {BSG},
-  usera = {Urteil},
-  userb = {BSG 2013-07-15},
+@RULING{BSG20130715,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 2013-07-15},
   date = {2013-07-25},
   gender = {sn},
   url = {http://piraten-bsg.de/#1926183737}
 }
-@JURISDICTION{BSG1614HS,
-  author = {Bundesschiedsgericht},
-  shortauthor = {BSG},
-  usera = {Urteil},
-  userb = {BSG 16/14-H S},
+@RULING{BSG1614HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Urteil},
+  sign = {BSG 16/14-H S},
   date = {2014-05-22},
   gender = {sn},
   url = {http://piraten-bsg.de/#677993841}
 }
-@JURISDICTION{BSG1415HS,
-  author = {Bundesschiedsgericht},
-  shortauthor = {BSG},
-  usera = {Beschluss},
-  userb = {BSG 14/15-H S},
+@RULING{BSG1415HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 14/15-H S},
   date = {2015-03-12},
   gender = {sn},
   url = {http://piraten-bsg.de/#1488263988}
 }
-@JURISDICTION{BSG1515HS,
-  author = {Bundesschiedsgericht},
-  shortauthor = {BSG},
-  usera = {Beschluss},
-  userb = {BSG 15/15-H S},
+@RULING{BSG1515HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 15/15-H S},
   date = {2015-03-19},
   gender = {sn},
   url = {http://piraten-bsg.de/#1063892973}
 }
-@JURISDICTION{BSG1615HS,
-  author = {Bundesschiedsgericht},
-  shortauthor = {BSG},
-  usera = {Beschluss},
-  userb = {BSG 16/15-H S},
+@RULING{BSG1615HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 16/15-H S},
   date = {2015-04-09},
   gender = {sn},
   url = {http://piraten-bsg.de/#678917362}
 }
-@JURISDICTION{BSG1715HS,
-  author = {Bundesschiedsgericht},
-  shortauthor = {BSG},
-  usera = {Beschluss},
-  userb = {BSG 17/15-H S},
+@RULING{BSG1715HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 17/15-H S},
   date = {2015-04-09},
   gender = {sn},
   url = {http://piraten-bsg.de/#1873239599}
 }
-@JURISDICTION{BSG3815HS,
-  author = {Bundesschiedsgericht},
-  shortauthor = {BSG},
-  usera = {Beschluss},
-  userb = {BSG 38/15-H S},
+@RULING{BSG3815HS,
+  court = {Bundesschiedsgericht},
+  shortcourt = {BSG},
+  decisiontype = {Beschluss},
+  sign = {BSG 38/15-H S},
   date = {2015-07-17},
   gender = {sn},
   url = {http://piraten-bsg.de/#549629106}
 }
-@JURISDICTION{LSGBB147,
-  author = {Landesschiedsgericht~Brandenburg},
-  shortauthor = {LSG~BB},
-  usera = {Urteil},
-  userb = {LSG Bbg 14/7},
+@RULING{LSGBB147,
+  court = {Landesschiedsgericht~Brandenburg},
+  shortcourt = {LSG~BB},
+  decisiontype = {Urteil},
+  sign = {LSG Bbg 14/7},
   date = {2015-04-16},
   gender = {sn},
   url = {https://wiki.piratenbrandenburg.de/images/d/d7/LSG-Bbg-14-7_Beschluss_2015_04_16.pdf}
 }
+@RULING{LSGBB146,
+  court = {Landesschiedsgericht~Brandenburg},
+  shortcourt = {LSG~BB},
+  decisiontype = {Urteil},
+  sign = {LSG Bbg 14/6},
+  date = {2015-04-25},
+  gender = {sn},
+  url = {https://wiki.piratenbrandenburg.de/images/4/4a/LSG-Bbg-14-6_Urteil_2015_04_25.pdf}
+}
+
+
