--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -10,7 +10,7 @@ für die Piratenpartei Deutschland und Untgliederungen\\
 
 \usepackage{blindtext}
 \addbibresource{sghandbuch.bib}
-\newindex[Urteilsverzeichnis]{jurisdiction}
+\newindex[Urteilsverzeichnis]{ruling}
 \newindex[Stichwortverzeichnis]{idx}
 \newindex[Paragraphenverzeichnis]{paridx}
 \makenomenclature
@@ -70,13 +70,13 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \appendix
 \onecolumn
 
-\printbibliography[heading=bibliography,title={Rechtsprechungsverzeichnis}, type=jurisdiction]
-\printbibliography[heading=bibliography,nottype=jurisdiction]
+\printbibliography[heading=bibliography,title={Rechtsprechungsverzeichnis}, type=ruling]
+\printbibliography[heading=bibliography,nottype=ruling]
 
 \printnomenclature
 
-\setindexpreamble[jurisdiction]{Ein Verzeichnis aller für dieses Handbuch relevanten Urteile und der Textstellen, an denen über deren Inhalt geschrieben wird.}
-\printindex[jurisdiction]
+\setindexpreamble[ruling]{Ein Verzeichnis aller für dieses Handbuch relevanten Urteile und der Textstellen, an denen über deren Inhalt geschrieben wird.}
+\printindex[ruling]
 
 \setindexpreamble[idx]{Ein ganz normales Sachregister zu wichtigeren und weniger wichtigeren Stichworten.}
 \printindex[idx]
