added commentaries to library

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -1,3 +1,47 @@
+@COMMENTARY{lenski2011parteiengesetz,
+  author	= {Sophie-Charlotte Lenski},
+  title		= {Parteiengesetz und Recht der Kandidatenaufstellung},
+  shorttitle	= {PartG},
+  titleaddon	= {Handkommentar},
+  shorthand	= {Lenski},
+  publisher	= {Nomos},
+  year		= {2011},
+  location	= {Baden-Baden},
+  isbn		= {978-3-8329-1393-9}
+}
+@COMMENTARY{ipsen2008parteiengesetz,
+  author	= {Jörn Ipsen},
+  title		= {Parteiengesetz},
+  shorttitle	= {PartG},
+  substitle	= {Gesetz über die politischen Parteien},
+  titleaddon	= {Kommentar},
+  shorthand	= {Ipsen},
+  publisher	= {Beck},
+  year		= {2008},
+  location	= {München},
+  isbn		= {978-3406575310}
+}
+@COMMENTARY{kersten2007parteiengesetz,
+  author	= {Jens Kersten and Stephan Rixen},
+  title		= {Parteiengesetz (PartG) und europäisches Parteienrecht},
+  shorttitle	= {PartG},
+  titleaddon	= {Kommentar},
+  shorthand	= {Kersten/Rixen},
+  publisher	= {Kohlhammer},
+  year		= {2009},
+  address	= {Stuttgart},
+  isbn		= {978-3-17-019131-0}
+}
+@COMMENTARY{morlok2013parteiengesetz,
+  author	= {Martin Morlok},
+  title		= {Parteiengesetz},
+  shorttitle	= {PartG},
+  shorthand	= {Morlok},
+  publisher	= {Nomos},
+  edition	= {2},
+  year		= {2013},
+  address	= {Baden-Baden}
+}
 @ARTICLE{Loewisch1985,
   title = {Der Ausschluß aus politischen Parteien},
   shorttitle = {Parteiausschluss},
