Kapitel hinzugefügt: Innere Organisation von Schiedsgerichten

--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -47,6 +47,8 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 
 \input{Einleitung.tex}
 
+\input{Organisation.tex}
+
 \input{Standardworkflow-Anrufung.tex}
 
 \input{Gerichtszusammensetzung.tex}
