Inhaltsverzeichnis in Inhaltsübersicht umbenannt

--- a/sghandbuch.tex
+++ b/sghandbuch.tex
@@ -42,6 +42,7 @@ Eine Meinung zu haben gehört zum Berufsbild eines Richters.
 \clearpage			% Seitenende
 \twocolumn			% Wieder ins Zweitspaltenlayout wechselns
 
+\renewcommand{\contentsname}{Inhaltsübersicht}
 \tableofcontents
 
 \input{Einleitung.tex}
